maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:60: error: illegal start of simple expression
  }
  ^